menu1 fix horizontal scroll v1

--- a/css/menu1.scss
+++ b/css/menu1.scss
@@ -12,16 +12,18 @@ html{
 body{
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
  
 .container{
     //background-color: rgb(3, 71, 71);
     //position: absolute;
-    width: 100%;
+    width:100%;
     height: auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 
@@ -60,7 +62,7 @@ header{
         height: 100%;
     }
     background-color: darksalmon;
-    width: 100%;
+    width:100%;
     height: 300px;
 }
 
@@ -69,8 +71,10 @@ header{
 
 
 .carte{
-    background-color: rgb(176, 188, 143);
+    background-color: #b0bc8f;
     height: auto;
+    //width: 100%;
+    width: 96%;
     border-radius: 15px 15px 0px 0px;
     display: flex;
     flex-direction: column;
@@ -84,12 +88,15 @@ header{
     font-size: 30px;
     color: black;
     margin-top: 7px;
+    margin-right: 25px;
     }
-    //background-color:purple ;
+    background-color:purple ;
     height: 70px;
+    //width: 100%;
     display: flex;
     justify-content: space-between;
-    margin: 25px 15px 0px;
+    margin-top: 25px;
+    padding-left: 15px;
 }
 
 
@@ -101,10 +108,10 @@ header{
 
 .entrée{
     background-color: brown;
-    //width: 100%;
+    width: 100%;
     text-transform: uppercase;
     font-size: 9px;
-    margin-left: 15px;
+    //margin-left: 15px;
 }
 
 
@@ -211,7 +218,7 @@ header{
 */
 
 .box{
-    background-color: rgb(65, 59, 62);
+    background-color: rgb(218, 9, 113);
     //padding: 5px;
     margin-bottom: 5px;
     display: flex;
@@ -260,16 +267,16 @@ header{
     height: 70px;
     border-radius: 0px 10px 10px 0px;
     background-color: rgb(255, 145, 0);
-    //display: none;
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     top: 0px;
     right: 0px;
-    //animation: appears 0.3s;
     transition: 0.8s;
     opacity: 0;
+    //animation: appears 0.3s;
+    //display: none;
 }
 
 
@@ -287,13 +294,14 @@ header{
     }
 }
 */
+
+
 .button:checked ~ .coche{
     background-color: red;
     width: 20%;
     display: flex;
     opacity: 1;
     z-index: 1700;
-    
 }
 
 
@@ -301,16 +309,16 @@ header{
 #button{
     //width: 100%;
     //height: 100%;
-    //display: none;
+    display: none;
 }
 
 
 .choix{
     background-color: rgb(2, 136, 2);
-    height: 90px;
+    height: 100px;
     width: 100%;
     display: flex;
-    //border-radius: 10px;
+    //padding: 10px;
 }
 
 
@@ -325,11 +333,6 @@ header{
 
 
 .choix .tarif{
-    /*i{
-        background-color: hotpink;
-        transform: translateX(-10px);
-    }
-    */
     background-color: gold;
     width: 20%;
     display: flex;
@@ -337,12 +340,6 @@ header{
     align-items: center;
     border-radius: 0px 10px 10px 0px;
 }
-
-
-
-
-
-
 
 
 
@@ -369,10 +366,8 @@ header{
     background-color: rgb(65, 42, 165);
     text-transform: uppercase;
     font-size: 9px;
-    margin-left: 15px;
+    //margin-left: 15px;
 }
-
-
 
 
 
@@ -382,6 +377,8 @@ header{
     color: rgb(53, 53, 53);
     padding-bottom: 15px;
 }
+
+
 
 .plat h1::after{
     content: " ";
@@ -400,7 +397,7 @@ header{
     background-color: rgb(42, 165, 104);
     text-transform: uppercase;
     font-size: 9px;
-    margin-left: 15px;
+    //margin-left: 15px;
 }
 
 
@@ -436,12 +433,10 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
-
     }
     p{
         color: rgb(248, 248, 247);
         transform: translateY(-10%);
-
     }
     //background-color: indigo;
     width: 100%;
@@ -455,23 +450,25 @@ header{
 
 
 footer{
-   
     p{
         margin-bottom: 7px;
+        margin-left: 10px;
     }
     background-color: rgb(65, 59, 62);
     width: 100%;
     height: 150px;
     color: white;
-    padding: 30px 20px;
+    padding: 30px 0px;
   /*position: fixed;
-  bottom: 0px;
+    bottom: 0px;
   */
 }
+
 
 footer img{
     width:150px;
     color: white;
+    padding: 0px 20px;
 }
 
 
@@ -479,6 +476,9 @@ footer img{
 
 
 .proposer{
+    i{
+        margin-left: 20px;
+    }
     p{
         margin-left: 15px;
     }
@@ -491,6 +491,9 @@ footer img{
 }
 
 .devenir{
+    i{
+        margin-left: 20px;
+    }
     p{
         margin-left: 10px;
         margin-bottom: 5px;
@@ -506,6 +509,7 @@ footer img{
 footer a{
     text-decoration: none;
     color: white;
+    margin-left: 10px;
 }
 
 
